<resources>
    <string name="app_name">Price_this</string>
    <string name="productToRegister">등록할 상품 이름</string>
    <string name="registerPicture">상품 사진 선택</string>
    <string name="tag">#fruit#organic</string>
    <string name="add">추가</string>
    <string name="registerPrice">등록가: </string>
    <string name="email">이메일</string>
    <string name="name">닉네임</string>
    <string name="password">비밀번호</string>
    <string name="registerUser">회원가입</string>
    <string name="modify">수정하기</string>
    <string name="point">포인트</string>
    <string name="NULL">null</string>
    <string name="averagePrice">평균가:</string>
    <string name="registeredPrice">등록가:</string>
    <string name="recommend">추천 가격 \ </string>
    <string name="goodsTag">태그: </string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="spec">특징 및 상태:</string>
    <string name="specEx">Weight: 1kg\nFreshness: Good\nColor: Good\nSweetness: Normal</string>
    <string name="description">description</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">가입하기</string>
    <string name="sign_in_guide">또 뵙네요! 로그인하기</string>
    <string name="password_condition">*비밀번호는 6 자 이상입니다</string>
    <string name="email_condition">*이미 등록된 이메일입니다ㅣ</string>
    <string name="first_sign_in">\"이거 얼마\"에 처음 오셨나요?</string>
    <string name="login">또 뵙네요! 안녕하세요!</string>



</resources>