<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/board_frame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtView_productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:hint="@string/productToRegister" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#a1d8e4" />

        <ImageView
            android:id="@+id/imgView_productImg"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/averagePrice"
                    android:textColor="#a1d8e4"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtView_avgPrice"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/averagePrice"
                    android:textColor="#a1d8e4"
                    android:textSize="20dp" />
            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/registeredPrice"
                    android:textColor="#a1d8e4"
                    android:textSize="20dp" />
                <TextView
                    android:id="@+id/txtView_regPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="#a1d8e4"
                    android:textSize="20dp"
                    android:text="@string/registeredPrice"/>
            </TableRow>
            <TextView
                android:id="@+id/txtView_userPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:text="user: "/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#a1d8e4" />
            <TableRow>
                <TextView
                    android:id="@+id/txtView_priceToRegister"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="6"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginBottom="7dp"
                    android:hint="@string/recommend"/>
                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="7dp"
                    android:background="@drawable/btn_plus"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:background="@drawable/btn_minus"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>