<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfdf3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fcfdf3"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="90dp"
            tools:layout_editor_absoluteY="25dp">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/board_frame2">

                <TableRow android:padding="20dp">

                    <ImageButton
                        android:id="@+id/ImgBtn_profile"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/add_picture_icon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtView_name"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:padding="3dp"
                            android:text="@string/name"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="#50b5c5"/>

                        <TextView
                            android:id="@+id/txtView_email"
                            android:layout_width="250dp"
                            android:layout_height="25dp"
                            android:padding="3dp"
                            android:text="@string/email"
                            android:textSize="13dp" />

                    </LinearLayout>


                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="#a1d8e4" />

                <TableRow android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/question"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:textColor="#50b5c5"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/answer"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:textColor="#50b5c5"/>


                </TableRow>

                <TableRow
                    android:layout_marginBottom="20dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/mypage_question"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/mypage_answer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center" />
                </TableRow>

            </TableLayout>


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>